# platypus-phone

./: .gitignore  DESIGN_DOCUMENT  DIGEST_AUTH_FIX.md  README.md  index.html  package-lock.json  package.json
docs/: AUDIO_RESAMPLING.md  AUDIO_RESAMPLING_FINAL.md  BUILD_ON_WINDOWS.md  COMPLETE_SUMMARY.md  CREDENTIALS_STORAGE.md  DESIGN_DOCUMENT.md  QUICK_START_AUDIO.md  RTP_IMPLEMENTATION.md  SIP_IMPLEMENTATION.md
src/: App.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs  resample.rs  rtp.rs  settings.rs  sip.rs
