[package]
name = "platypus-phone"
version = "0.1.0"
description = "Native SIP Desktop Softphone"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
# Audio dependencies
cpal = "0.15"  # Cross-platform audio I/O
rubato = "0.14"  # Sample rate conversion
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# RTP will be implemented manually for now

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
